--- a/donacion/cliente/src/app/components/login/login.component.css
+++ b/donacion/cliente/src/app/components/login/login.component.css
@@ -16,6 +16,8 @@
     margin: 0px auto;
     background: rgba(255, 255, 255, 0.15);
     padding: 2rem 3rem;
+    border-style: solid;
+    border-width: 0.3px;
     border-radius: 2.5rem;
     background-color: #ecf0f3;
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
