--- a/donacion/cliente/src/app/components/transfuciones/transfuciones.component.html
+++ b/donacion/cliente/src/app/components/transfuciones/transfuciones.component.html
@@ -1,1 +1,89 @@
-<p>transfuciones works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+</head>
+<body>
+    <nav>
+        <div class="nav-wrapper" id="navbarclass">
+          <a [routerLink]="['/main']" class="brand-logo">
+            <img src="../../../assets/imagenes/medicine.png" width="50px" height="50px" class="logo">
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a >Solicitud</a></li>
+            <li><a >Registro de pacientes</a></li>
+            <li></li>
+          </ul>
+        </div>
+      </nav>
+
+    <!-- Modal Structure -->
+    <main class="table mt-4">
+      <section class="table__header" aling="center">
+          <h1>Transfuciones</h1>
+      </section>
+
+      <section class="table__body">
+          <table>
+              <thead>
+                  <tr>
+                      <th>Idsolicitud</th>
+                      <th>Idpaciente</th>
+                      <th>fecha</th>
+                  </tr>
+              </thead>
+              <tbody>
+                <tr class="active-row" *ngFor="let tranfucion of tranfucion" >
+                  <td>{{tranfucion.idsolicitud}}</td>
+                  <td>{{tranfucion.idpaciente}}<i class="material-icons" (click)="visualizarPaciente(tranfucion.idpaciente);preparar();">info</i></td>
+                  <td>{{tranfucion.fecha}}</td>
+              </tr>
+              </tbody>
+              <a><i class="material-icons">person_add</i></a>
+          </table>
+      </section>
+  </main>
+
+       <div id="mymodal" class="modal" >
+        <div class="modal-dialog">
+           <div class="modal-content">
+           <div class="modal-header">
+             <h4 class="modal-title">Informacion Donadores</h4>
+           </div>
+           <div class="modal-body">
+            <div class="container" id="formulario">
+                
+                  <div class="col-3">
+                    <label for="idpaciente" class="form-label">Id paciente</label>
+                    <input disabled type="text" id="idpaciente" class="email" [(ngModel)]="personas.idpaciente"  name="idpersona" placeholder="nombre del paicente">
+                </div>
+                  <div class="col-3">
+                      <label for="tipodesangre" class="form-label">Tipo de sangre</label>
+                      <input disabled type="text" id="tipodesangre" class="email" [(ngModel)]="personas.tipodesangre" name="nombrepaciente" placeholder="tipo de sangre del paicente">
+                  </div>
+                  <div class="col-2">
+                    <label for="nombrepersona" class="form-label">Nombre del paciente</label>
+                    <input disabled type="text" id="nombrepersona" class="email"  name="tipodesangre" [(ngModel)]="personas.nombre" placeholder="Nombre del paciente" />
+                </div>
+                  <div  class="col-3">
+                      <label for="genero">Genero de la persona</label>
+                      <input disabled type="text" id="genero" class="email" name="edad" [(ngModel)]="personas.genero"  placeholder="Genero del paciente">
+                  </div>
+                  <div class="col-2">
+                    <label for="edad">Edad del paciente</label>
+                    <input disabled type="text" id="edad" class="email" [(ngModel)]="personas.edad" name="genero" placeholder="Genero del paciente">
+                  </div>
+            </div>
+              <div class="buttonSelect">
+                <a  class=" modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
+             </div>
+           </div>
+           </div>
+        </div>
+       </div>
+   
+  </body>
+</html>
