--- a/donacion/cliente/src/app/components/enfermera/enfermera.component.html
+++ b/donacion/cliente/src/app/components/enfermera/enfermera.component.html
@@ -11,15 +11,14 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
    
 </head>
 <body>  
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid" id="navbar">
           <a class="navbar-brand" href="#">Bienvenido Administrador</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +38,7 @@
           </div>
         </div>
       </nav>
- 
+ <div id="tabla">
     <table class="table table-success table-striped mt-4 g-3" >
         <thead>
             <tr>
@@ -63,7 +62,8 @@
             </tr>
           </tbody>
       </table>
-      <div class="container">
+    </div>
+      <div class="container" id="formulario">
         <form class="row g-3 mt-3">
             <div class="col-6">
                 <label for="numero_tranajador" class="form-laber">Numero de trabajador</label>
@@ -87,7 +87,7 @@
                     </div>
 
                 <div class="col-1 col-form-label" aling="center">
-                    <i class="bi bi-shield-plus" id="botones" data-target="#ventanaModal"></i>
+                    <i class="bi bi-shield-plus" id="botones"  data-bs-toggel="modal" data-bs-target="modal"></i>
                 </div>
                 <div class="col-4" >
                     <label for="persona" class="form-label">Persona </label>
@@ -96,24 +96,24 @@
         </div>
             <div class="col-12">
                 <BUTton type="submit" class="btn butn">Registrar</BUTton>
-                <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal">Modal</a>
+                <button type="button" class="btn btn-primary" (click)="preparar()">Launch demo modal</button>
             </div>
         </form>
       </div>
  
-      <div class="modal" tabindex="-1" id="modal" aria-labelledby="logoutLabel" aria-hidden="true">
+      <div class="modal" tabindex="-1" id="Mymodal" >
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close"  (click)="static()"></button>
             </div>
             <div class="modal-body">
               <p>Modal body text goes here.</p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-secondary" href="#" >Close</button>
+              <button type="button-" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
