--- a/donacion/cliente/src/app/components/paciente/paciente.component.html
+++ b/donacion/cliente/src/app/components/paciente/paciente.component.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">
-            <img src="Logo" class="logo">
+        <div class="nav-wrapper" id="navbarclass">
+          <a [routerLink]="['/main']" class="brand-logo">
+            <img src="../../../assets/imagenes/medicine.png" width="50px" height="50px" class="logo">
           </a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a (click)="changeDonadores()">Donadores</a></li>
@@ -37,24 +37,48 @@
                 <td>{{paciente.idpersona}}</td>
                 <td>{{paciente.tipodesangre}}</td>
                 <td><a (click)="eliminarPaciente(paciente.idpaciente)"><i class="material-icons prefix">delete_forever</i></a>
-                    <a (click)="visualizarPaciente(paciente.idpaciente, paciente.idpersona)"><i class="material-icons prefix">remove_red_eye</i></a>
+                    <a (click)="visualizarPaciente(paciente.idpaciente, paciente.idpersona); preparar();"><i class="material-icons prefix">remove_red_eye</i></a>
                     <a><i class="material-icons prefix">edit</i></a></td>  
             </tr>
         </tbody>
     </table>
-    <form  id="msform">
-     <fieldset>
-        <h2 class="fs-title">Ingresar paciente</h2>
-        <h3 class="fs-subtitle">Ingresa los datos abajo</h3>
-        <input disabled type="number" class="email" placeholder="idpersona" name="persona" [(ngModel)]="pacienteVar.idpersona" />
-        <input type="text" class="email" [(ngModel)]="pacienteVar.tipodesangre"  name="tipodesangre" placeholder="tipo de sangre" />
-        <input type="text" class="email" [(ngModel)]="personas.nombre" name="nombrepaciente" placeholder="nombre del paicente">
-           <input type="text" class="email" [(ngModel)]="personas.edad" name="edad" placeholder="Edad del paciente">
-           <input type="text" class="email" [(ngModel)]="personas.genero" name="genero" placeholder="Genero del paciente">
-        <input type="button" name="next" class="next action-button" value="Agregar" (click)="agregarPaciente()"/>
-        <input type="button" name="next" class="next action-button" value="Actualizar" (click)="actualizarPaciente()"/>
-      </fieldset>
-    </form>
+    <div id="mymodal" class="modal" >
+      <div class="modal-dialog">
+         <div class="modal-content">
+         <div class="modal-header">
+           <h4 class="modal-title">Informacion Donadores</h4>
+         </div>
+         <div class="modal-body">
+          <div class="container" id="formulario">
+              
+                <div class="col-3">
+                  <label for="idpaciente" class="form-label">Id paciente</label>
+                  <input disabled type="text" id="idpaciente" class="email" [(ngModel)]="pacienteVar.idpaciente"  name="idpersona" placeholder="nombre del paicente">
+              </div>
+                <div class="col-3">
+                    <label for="tipodesangre" class="form-label">Tipo de sangre</label>
+                    <input disabled type="text" id="tipodesangre" class="email" [(ngModel)]="pacienteVar.tipodesangre" name="nombrepaciente" placeholder="tipo de sangre del paicente">
+                </div>
+                <div class="col-2">
+                  <label for="nombrepersona" class="form-label">Nombre del paciente</label>
+                  <input disabled type="text" id="nombrepersona" class="email"  name="tipodesangre" [(ngModel)]="personas.nombre" placeholder="Nombre del paciente" />
+              </div>
+                <div  class="col-3">
+                    <label for="genero">Genero de la persona</label>
+                    <input disabled type="text" id="genero" class="email" name="edad" [(ngModel)]="personas.genero"  placeholder="Genero del paciente">
+                </div>
+                <div class="col-2">
+                  <label for="edad">Edad del paciente</label>
+                  <input disabled type="text" id="edad" class="email" [(ngModel)]="personas.edad" name="genero" placeholder="Genero del paciente">
+                </div>
+          </div>
+            <div class="buttonSelect">
+              <a  class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+           </div>
+         </div>
+         </div>
+      </div>
+     </div>
 
 </body>
 </html>
